hphp/hack/test/typecheck/akempty/akempty_promotion_7.php.exp
File "akempty_promotion_7.php", line 9, characters 7-9:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
